# mcp-oeis

./: .bumpversion.cfg  CHANGELOG.md  README.md  SKILL.md  SPEC.md  mcp.json  pyproject.toml  server.json
.github/workflows/: pypi-publish.yml
src/mcp_oeis/: __init__.py  __main__.py  client.py  mcp.py
tests/: conftest.py  test_client.py  test_mcp.py
